--- a/demo-for-spring-webflux/movie-info-service/src/main/resources/application.properties
+++ b/demo-for-spring-webflux/movie-info-service/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-server.port=${PORT}
-spring.data.mongodb.uri=${MONGODB_URI}
-spring.data.mongodb.database=${MONGODB_DATABASE}
+server.port=${PORT:3000}
+spring.data.mongodb.uri=${MONGODB_URI:mongodb://user:pass@localhost:27017/?authMechanism=SCRAM-SHA-1}
+spring.data.mongodb.database=${MONGODB_DATABASE:movie_info}
