--- a/demo-for-spring-webflux/pom.xml
+++ b/demo-for-spring-webflux/pom.xml
@@ -27,7 +27,18 @@
     <java.version>17</java.version>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
+    <de.flapdoodle.embed>4.12.0</de.flapdoodle.embed>
   </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>de.flapdoodle.embed</groupId>
+        <artifactId>de.flapdoodle.embed.mongo.spring3x</artifactId>
+        <version>${de.flapdoodle.embed}</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <dependencies>
     <dependency>
