--- a/demo-for-spring-webflux/movie-info-service/src/main/resources/application.properties
+++ b/demo-for-spring-webflux/movie-info-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-server.port=${PORT:3000}
+server.port=${MOVIE_INFO_SERVICE_PORT:3000}
 spring.data.mongodb.uri=${MONGODB_URI:mongodb://user:pass@localhost:27000/?authMechanism=SCRAM-SHA-1}
-spring.data.mongodb.database=${MONGODB_DATABASE:movie_info}
+spring.data.mongodb.database=${MOVIE_INFO_SERVICE_MONGODB_DATABASE:movie_info}
+logging.level.root=debug
